# eisv-lumen

./: .gitignore  AUTONOMOUS_WORK_SUMMARY.md  LICENSE  Lumen_EISV_Paper_Draft.docx  README.md  pyproject.toml
data/real_test/: test.json
data/training/: test.json  train.json  val.json
data/training_v2/: test.json  train.json  val.json
docs/: blog-post-progress.md  blog-rewrite-handoff.md  huggingface-blog-post-draft.md  project-trajectory-handoff.md  visualization-specifications.md
docs/archive/: 2026-02-12-eisv-lumen-implementation.md  2026-02-12-layer3-phase1-plan.md  AUTONOMOUS_WORK_SUMMARY.md  blog-post-progress.md  project-trajectory-handoff.md
docs/plans/: 2026-02-12-eisv-lumen-model-design.md  2026-02-12-layer3-deep-voice-design.md  2026-02-23-hf-presence-phase1-design.md  2026-02-23-hf-presence-phase1-impl.md
eisv_lumen/: __init__.py
eisv_lumen/bridge/: __init__.py  lumen_bridge.py
eisv_lumen/distillation/: __init__.py  eval_student.py  export_student.py  train_student.py
eisv_lumen/eval/: baseline.py  metrics.py
eisv_lumen/extract/: assembler.py  derivatives.py  governance_data.py  governance_states.py  lumen_states.py  (+1 more)
outputs/: eval_results.json  eval_results_v3.json  eval_results_v4.json  eval_results_v5.json  eval_results_v5_real.json  eval_results_v6.json  eval_results_v6_real.json
scripts/: README.md  eval_on_real_data.py  generate_distillation_data.py  generate_figure1_trajectory_comparison.py  generate_figure3_coherence_comparison.py  prepare_blended_data.py
space/: README.md  app.py  requirements.txt
tests/: test_integration.py
(+71 files in other folders)
