[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eisv-lumen"
version = "0.1.0"
description = "EISV-Lumen: Dynamics-emergent voice and governance benchmark."
requires-python = ">=3.11"
authors = [
    { name = "hikewa" },
]

dependencies = [
    "datasets>=2.16.0",
    "huggingface_hub>=0.20.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "torch>=2.1.0",
    "peft>=0.7.0",
    "transformers>=4.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring real anima.db",
]
